--- a/createProject/createProject.html
+++ b/createProject/createProject.html
@@ -10,7 +10,7 @@
 
     <body>
         <navbar></navbar>
-        <h1>Create New Project</h1>
+        <h1 class="projectForm">Create New Project</h1>
         <create></create>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
@@ -19,7 +19,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-messages.min.js"></script>
         <!-- Angular Material Javascript now available via Google CDN; version 1.1.23 used here -->
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.23/angular-material.min.js"></script>
-        <script src="../app.js"></script>
+        <script src="/app.js"></script>
         <script src="../utility/utility.js"></script>
         <script src="createProject.js"></script>
         
