--- a/createProject/createProject.html
+++ b/createProject/createProject.html
@@ -5,7 +5,8 @@
         <title>Your App Name</title>
         <!-- Angular Material CSS now available via Google CDN; version 1.1.23 used here -->
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.23/angular-material.min.css"/>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="cpstyle.css"/>
+        <link rel="stylesheet" href="../utility/navbar.css"/>
     </head>
 
     <body>
