--- a/utility/navbar.html
+++ b/utility/navbar.html
@@ -1,6 +1,6 @@
 <div>
-    <ul>
-        <li><a href="../home/home.html">Home</a></li>
+    <ul class="navigation">
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../createProject/createProject.html">Create Project</a></li>
     </ul>
 <div>
