--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.23/angular-material.min.css">
         <link href="./home/home.css" rel="stylesheet" />
         <link href="./utility/navbar.css" rel="stylesheet" />
+        
+        <link id="bundlesscss" rel="stylesheet">
     </head>
 
     <body>
@@ -25,5 +27,8 @@
         <script src="./utility/utility.js"></script>
         <script src="./home/projectGrid.js"></script>
         <script src="./home/project.js"></script>
+    
+        <script id="bundle2" src=""></script>
+        <script id="bundle" src=""></script>
     </body>
 </html>
